# cloudctl

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: install.sh  uninstall.sh
src/cloudctl/: __init__.py  __main__.py  cli.py  config.py  docker_ops.py  models.py  prompts.py  tailscale_ops.py
