[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudctl"
version = "0.1.0"
description = "Manage Docker Compose projects and Tailscale serve/funnel from a single CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
cloudctl = "cloudctl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
